--- a/css/main.css
+++ b/css/main.css
@@ -1,59 +1,97 @@
+/* Baseline reset */
+html {
+  box-sizing: border-box;
+  font-size: 16px; }
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+body {
+  background-color: #4db1b1;
+  color: rgba(0, 0, 0, 0.78);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 100%;
+  line-height: 1.64rem;
+  margin: 0;
+  padding: 0; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: rgba(0, 0, 0, 0.89); }
+
+article {
+  padding: 2rem 1rem; }
+
 /* Add styles here */
 .navbar {
   align-items: center;
-  background-color: #4742DB;
-  border-bottom: 3px solid rgb(46, 46, 63);
+  background-color: #f7f7f7;
+  border-bottom: 3px solid #f0f0f0;
   display: flex;
   height: 60px;
-}
-
-.navbar::before {
-  content: " ";
-  border-top: 2px solid #d16199;
-  position: absolute;
-  top: 0px;
-  width: 100%;
-}
-
-.navbar .logo {
-  flex-grow: 1;
-  height: 100%;
-  align-items: center;
-  display: flex;
-  padding-left: 1rem;
-}
-
-.navbar .logo img {
-  height: calc(100% - 1.5rem);
-  width: auto;
-}
-
-.navbar .nav {
-  flex-grow: 1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-
-.navbar .menu-item {
-  color: #ffffff;
-  flex-grow: 1;
-  letter-spacing: 0.5px;
-  text-align: center;
-  text-transform: uppercase;
-  align-items: center;
-  height: 60px;
-  line-height: 60px;
-  justify-content: center;
-  border-bottom: 2px solid transparent;
-}
-
-.navbar .menu-item:hover {
-  background-color: #be0000;
-  cursor: pointer;
-}
-
-.navbar .menu-item.active {
-  border-color: #fffb00;
-}
+  /*carousel */
+  /* cards */ }
+  .navbar::before {
+    content: ' ';
+    border-top: 2px solid #6c61d1;
+    position: absolute;
+    top: 0px;
+    width: 100%; }
+  .navbar .logo {
+    flex-grow: 1;
+    height: 100%;
+    align-items: center;
+    display: flex;
+    padding-left: 1rem; }
+    .navbar .logo img {
+      height: calc(100% - 1.5rem);
+      width: auto; }
+  .navbar .nav {
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%; }
+  .navbar .menu-item {
+    color: #5a5775;
+    flex-grow: 1;
+    letter-spacing: 0.5px;
+    text-align: center;
+    text-transform: uppercase;
+    align-items: center;
+    height: 60px;
+    line-height: 60px;
+    justify-content: center;
+    border-bottom: 2px solid transparent; }
+    .navbar .menu-item:hover {
+      cursor: pointer; }
+    .navbar .menu-item.active {
+      border-color: #c2bfd9; }
+  .navbar .body {
+    font-family: fira sans;
+    background-image: url(./../img/backaground2.jpg); }
+  .navbar .break {
+    margin-left: 20px;
+    margin-right: 20px; }
+  .navbar .article {
+    padding: 20px;
+    border: 500px #e79a9a; }
+  .navbar .carousel {
+    width: 80%;
+    padding: 20px;
+    align-items: center; }
+  .navbar .carousel img {
+    width: 100%; }
+  .navbar .card {
+    margin: 20px; }
+    .navbar .card .card-deck {
+      padding: 20px; }
+    .navbar .card .card-img-top {
+      max-width: auto;
+      border: 2px solid #e09898; }
