--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,13 @@ html {
   box-sizing: inherit; }
 
 body {
-  background-color: #4db1b1;
   color: rgba(0, 0, 0, 0.78);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 100%;
   line-height: 1.64rem;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: fira sans; }
 
 h1,
 h2,
@@ -31,15 +31,13 @@ article {
 /* Add styles here */
 .navbar {
   align-items: center;
-  background-color: #f7f7f7;
+  background-color: #e6110a;
   border-bottom: 3px solid #f0f0f0;
   display: flex;
-  height: 60px;
-  /*carousel */
-  /* cards */ }
+  height: 60px; }
   .navbar::before {
     content: ' ';
-    border-top: 2px solid #6c61d1;
+    border-top: 2px solid #e6110a;
     position: absolute;
     top: 0px;
     width: 100%; }
@@ -52,46 +50,63 @@ article {
     .navbar .logo img {
       height: calc(100% - 1.5rem);
       width: auto; }
-  .navbar .nav {
-    flex-grow: 1;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%; }
-  .navbar .menu-item {
-    color: #5a5775;
-    flex-grow: 1;
-    letter-spacing: 0.5px;
-    text-align: center;
-    text-transform: uppercase;
-    align-items: center;
-    height: 60px;
-    line-height: 60px;
-    justify-content: center;
-    border-bottom: 2px solid transparent; }
-    .navbar .menu-item:hover {
-      cursor: pointer; }
-    .navbar .menu-item.active {
-      border-color: #c2bfd9; }
-  .navbar .body {
-    font-family: fira sans;
-    background-image: url(./../img/backaground2.jpg); }
-  .navbar .break {
-    margin-left: 20px;
-    margin-right: 20px; }
-  .navbar .article {
-    padding: 20px;
-    border: 500px #e79a9a; }
-  .navbar .carousel {
-    width: 80%;
-    padding: 20px;
-    align-items: center; }
-  .navbar .carousel img {
-    width: 100%; }
-  .navbar .card {
-    margin: 20px; }
-    .navbar .card .card-deck {
-      padding: 20px; }
-    .navbar .card .card-img-top {
-      max-width: auto;
-      border: 2px solid #e09898; }
+
+.nav {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%; }
+
+.menu-item {
+  color: #692321;
+  flex-grow: 1;
+  letter-spacing: 0.5px;
+  text-align: center;
+  text-transform: uppercase;
+  align-items: center;
+  height: 60px;
+  line-height: 60px;
+  justify-content: center;
+  border-bottom: 2px solid transparent; }
+  .menu-item:hover {
+    background-color: #1f33ea;
+    cursor: pointer; }
+  .menu-item.active {
+    border-color: #df7a77; }
+
+.body {
+  font-family: fira sans;
+  background-image: url(../../img/backaground2.jpg); }
+
+.break {
+  margin-left: 20px;
+  margin-right: 20px; }
+
+.article {
+  padding: 20px;
+  border: 500px #e79a9a; }
+
+/*carousel */
+.carousel {
+  width: 80%;
+  padding: 20px;
+  align-items: center; }
+
+.carousel img {
+  width: 100%; }
+
+/* cards */
+.card {
+  margin: 20px;
+  align-items: center; }
+  .card .card-deck {
+    padding: 20px; }
+  .card .racers .card-img-top {
+    width: 200px;
+    height: 150px;
+    border: 2px solid #e09898; }
+
+@media screen and (max-width: 720px) {
+  .card {
+    display: block; } }
