--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-  background-color: #4db1b1;
   color: rgba(0, 0, 0, 0.78);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -20,6 +19,7 @@ body {
   line-height: 1.64rem;
   margin: 0;
   padding: 0;
+  font-family: fira sans;
 }
 
 h1,
