--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,13 +5,14 @@
 $bg-color: hsl(2, 92%, 47%);
 $height: 60px;
 $active-color: rgb(255, 255, 0);
+$borders: 3px solid hsl(244, 100%, 58%);
+
 
 /* Add styles here */
 .navbar {
   align-items: center;
   background-color: $bg-color;
-  border-bottom: 3px solid hsl(244, 100%, 58%);
-  display: flex;
+  border-bottom: $borders;
   height: $height;
 
   &::before {
@@ -44,8 +45,12 @@ $active-color: rgb(255, 255, 0);
   height: 100%;
 }
 
-.menu-item {
+a.texty {
   color: white;
+}
+
+.menu-item {
+  color: rgb(102, 102, 102);
   flex-grow: 1;
   letter-spacing: 0.5px;
   text-align: center;
@@ -61,7 +66,7 @@ $active-color: rgb(255, 255, 0);
 
   // menu item .active is a class name in html while :hover is a pseudo class
   &:hover {
-    background-color: hsl(234, 95%, 57%);
+    background-color: hsl(234, 41%, 85%);
     cursor: pointer;
   }
 
@@ -76,6 +81,14 @@ body {
   background-image: url(../../img/backaground2.jpg);
 }
 
+ul {
+  font-size: 20px;
+}
+
+li {
+  padding: 10px;
+}
+
 .break {
   margin-left: 20px;
   margin-right: 20px;
@@ -84,35 +97,61 @@ body {
 .article {
   padding: 20px;
   border: 500px rgb(231, 154, 154);
+  color: white;
+  font-size: 20px;
+  text-align: center;
 }
 
 /*carousel */
 .carousel {
-  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
   padding: 20px;
-  align-items: center;
-}
-
-.carousel img {
-  width: 100%;
 }
 
 /* cards */
 
 .card {
-  margin: 10px;
+  margin: 40px;
+  padding: 10px;
   align-items: center;
+  background-color: rgb(175, 199, 238);
 
-  .racers .card-img-top {
+  .racers {
     width: 200px;
     height: 150px;
-    border: 2px solid rgb(224, 152, 152);
+    border: 2px solid $bg-color;
   }
 }
 
-@media screen and (max-width: 720px) {
-  .racers .card {
-    display: block;
+.card-img-top {
+  height: 40%;
+  border-bottom: 3px solid hsl(244, 100%, 58%);
+}
+
+
+.card-body {
+  width: 90%;
+  height: 300px;
+  overflow-x: hidden;
+}
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .card-body {
+    width: 100%;
+    height: 300px;
+    overflow: scroll;
+    overflow-x: hidden;
   }
 
+}
+
+@media only screen and (max-width: 768px) {
+  .racers {
+    width: 400px;
+    height: 150px;
+    border: 2px solid $bg-color;
+  }
 }
