--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ article {
   height: 100%; }
 
 a.texty {
-  color: white; }
+  color: black; }
 
 .menu-item {
   color: #666666;
@@ -72,10 +72,11 @@ a.texty {
   justify-content: center;
   border-bottom: 2px solid transparent; }
   .menu-item:hover {
-    background-color: #c9cce8;
+    background-color: #2e3ed1;
     cursor: pointer; }
   .menu-item.active {
-    border-color: #e8e87d; }
+    border-color: #e8e87d;
+    color: white; }
 
 body {
   font-family: fira sans;
@@ -100,17 +101,19 @@ li {
 
 /*carousel */
 .carousel {
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   width: 75%;
-  padding: 20px; }
+  height: auto;
+  padding: 20px;
+  background-color: 3px solid #3729ff;
+  border-radius: 3%; }
 
 /* cards */
 .card {
   margin: 40px;
   padding: 10px;
   align-items: center;
-  background-color: #afc7ee; }
+  border-color: #afc7ee; }
   .card .racers {
     width: 200px;
     height: 150px;
@@ -126,14 +129,16 @@ li {
   overflow-x: hidden; }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .card-body {
-    width: 100%;
-    height: 300px;
-    overflow: scroll;
-    overflow-x: hidden; } }
+  .card-deck {
+    margin: 10px; }
+  .card {
+    width: 800px;
+    height: 800px; } }
 
 @media only screen and (max-width: 768px) {
-  .racers {
-    width: 400px;
-    height: 150px;
-    border: 2px solid #e6110a; } }
+  .card-deck {
+    padding: 10px; }
+  .card {
+    width: 300px;
+    height: 450px;
+    margin: auto; } }
