--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@ $borders: 3px solid hsl(244, 100%, 58%);
     content: ' ';
     border-top: 2px solid $active-color;
     position: absolute;
+    left: 0px;
     top: 0px;
     width: 100%;
   }
@@ -67,6 +68,7 @@ a.texty {
   // menu item .active is a class name in html while :hover is a pseudo class
   &:hover {
     background-color: hsl(234, 64%, 50%);
+    color: white;
     cursor: pointer;
   }
 
@@ -88,6 +90,20 @@ ul {
 
 li {
   padding: 10px;
+}
+
+.history {
+  width: 60%;
+  color: white;
+  float: left;
+  text-align: center;
+  margin: 20px;
+}
+
+.vintage {
+  width: 30%;
+  float: right;
+  margin: 20px;
 }
 
 .break {
@@ -113,23 +129,46 @@ li {
   border-radius: 3%;
 }
 
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+  margin: 40px;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
 /* cards */
+.card-deck {
+  max-width: 100%;
+  align-items: center;
+  margin: auto;
+  justify-content: center;
+}
 
 .card {
+  width: 20%;
   margin: 40px;
   padding: 10px;
   align-items: center;
   border-color: rgb(175, 199, 238);
 
   .racers {
-    width: 200px;
+    width: auto;
     height: 150px;
     border: 2px solid $bg-color;
+    border-radius: 4%;
   }
 }
 
 .card-img-top {
-  height: 40%;
   border-bottom: 3px solid hsl(244, 100%, 58%);
 }
 
@@ -143,23 +182,34 @@ li {
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .card-deck {
-    margin: 10px;
+    max-width: 100%;
+    align-items: center;
+    margin: auto;
+    justify-content: center;
+  }
+
+  .card-group {
+    overflow: hidden;
   }
 
   .card {
-    width: 800px;
-    height: 800px;
+    width: auto;
+    height: auto;
+    margin: 20px;
+    align-items: center;
+    justify-content: center;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  .card-deck {
-    padding: 10px;
-  }
+
 
   .card {
     width: 300px;
     height: 450px;
+    margin: 10px;
+    align-items: center;
     margin: auto;
+    justify-content: center;
   }
 }
