--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 /* Baseline reset */
 html {
   box-sizing: border-box;
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 body {
   color: rgba(0, 0, 0, 0.78);
@@ -15,7 +17,8 @@ body {
   line-height: 1.64rem;
   margin: 0;
   padding: 0;
-  font-family: fira sans; }
+  font-family: fira sans;
+}
 
 h1,
 h2,
@@ -23,43 +26,57 @@ h3,
 h4,
 h5,
 h6 {
-  color: rgba(0, 0, 0, 0.89); }
+  color: rgba(0, 0, 0, 0.89);
+}
 
+/* main article on homepage */
 article {
-  padding: 2rem 1rem; }
+  padding: 2rem 1rem;
+}
 
-/* Add styles here */
+/*nav css nested */
 .navbar {
   align-items: center;
   background-color: #e6110a;
   border-bottom: 3px solid #3729ff;
-  height: 60px; }
-  .navbar::before {
-    content: ' ';
-    border-top: 2px solid yellow;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%; }
-  .navbar .logo {
-    flex-grow: 1;
-    height: 100%;
-    align-items: center;
-    display: flex;
-    padding-left: 1rem; }
-    .navbar .logo img {
-      height: calc(100% - 1.5rem);
-      width: auto; }
+  height: 60px;
+}
+
+.navbar::before {
+  content: ' ';
+  border-top: 2px solid yellow;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+}
+
+.navbar .logo {
+  flex-grow: 1;
+  height: 100%;
+  align-items: center;
+  display: flex;
+  padding-left: 1rem;
+}
+
+.navbar .logo img {
+  height: calc(100% - 1.5rem);
+  width: auto;
+}
 
 .nav {
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100%; }
+  height: 100%;
+}
 
+/*change color of text in nav*/
 a.texty {
-  color: black; }
+  color: black;
+}
+
 
 .menu-item {
   color: #666666;
@@ -71,118 +88,192 @@ a.texty {
   height: 60px;
   line-height: 60px;
   justify-content: center;
-  border-bottom: 2px solid transparent; }
-  .menu-item:hover {
-    background-color: #2e3ed1;
-    color: white;
-    cursor: pointer; }
-  .menu-item.active {
-    border-color: #e8e87d;
-    color: white; }
+  border-bottom: 2px solid transparent;
+}
 
+.menu-item:hover {
+  background-color: #2e3ed1;
+  color: white;
+  cursor: pointer;
+}
+
+.menu-item.active {
+  border-color: #e8e87d;
+  color: white;
+}
+
+/* main body edits*/
 body {
   font-family: fira sans;
-  background-image: url(../../img/backaground2.jpg); }
+  background-image: url(../../img/backaground2.jpg);
+}
 
 ul {
-  font-size: 20px; }
+  font-size: 20px;
+}
 
 li {
-  padding: 10px; }
+  padding: 10px;
+}
 
-.history {
-  width: 60%;
-  color: white;
-  float: left;
-  text-align: center;
-  margin: 20px; }
-
-.vintage {
-  width: 30%;
-  float: right;
-  margin: 20px; }
-
+/*line break on each page between containers*/
 .break {
   margin-left: 20px;
-  margin-right: 20px; }
+  margin-right: 20px;
+}
 
 .article {
   padding: 20px;
   border: 500px #e79a9a;
   color: white;
   font-size: 20px;
-  text-align: center; }
+  text-align: center;
+}
 
-/*carousel */
-.carousel {
+/*css for history page*/
+
+/*main container of all divs on history page*/
+.whatever {
   margin: auto;
-  width: 75%;
+  width: 80%;
   height: auto;
-  padding: 20px;
-  background-color: 3px solid #3729ff;
-  border-radius: 3%; }
+}
 
+.history {
+  color: white;
+  text-align: center;
+  margin: 20px;
+  margin-bottom: 80px;
+  align-content: center;
+}
+
+/*video css for history page youtube videos*/
 .video-responsive {
   overflow: hidden;
   padding-bottom: 56.25%;
   position: relative;
   height: 0;
-  margin: 40px; }
+  margin: 40px;
+}
 
 .video-responsive iframe {
   left: 0;
   top: 0;
   height: 100%;
   width: 100%;
-  position: absolute; }
+  position: absolute;
+}
 
-/* cards */
+
+
+/*carousel on homepage*/
+.carousel {
+  margin: auto;
+  width: 75%;
+  height: auto;
+  padding: 20px;
+  background-color: 3px solid #3729ff;
+  border-radius: 3%;
+}
+
+
+
+/* bootstrap cards css*/
+
+/*card group in a row*/
 .card-deck {
   max-width: 100%;
   align-items: center;
   margin: auto;
-  justify-content: center; }
+  justify-content: center;
+}
 
+/*individual card*/
 .card {
   width: 20%;
   margin: 40px;
+  height: auto;
   padding: 10px;
   align-items: center;
-  border-color: #afc7ee; }
-  .card .racers {
-    width: auto;
-    height: 150px;
-    border: 2px solid #e6110a;
-    border-radius: 4%; }
+  border-color: #afc7ee;
+}
 
+/*css for cards of the racers on racers page*/
+.card .racers {
+  width: auto;
+  height: 150px;
+  border: 2px solid #e6110a;
+  border-radius: 4%;
+}
+
+/*images above each card*/
 .card-img-top {
-  border-bottom: 3px solid #3729ff; }
+  border-bottom: 3px solid #3729ff;
+}
 
+/*text in body of each card*/
 .card-body {
   width: 90%;
   height: 300px;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
+
+
+/* footer css */
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #443131;
+  font-size: 10px;
+  color: white;
+  text-align: right;
+}
+
+
+/*media query for tablets */
 @media (min-width: 768px) and (max-width: 1024px) {
   .card-deck {
     max-width: 100%;
     align-items: center;
     margin: auto;
-    justify-content: center; }
+    justify-content: center;
+    margin-left: 0;
+  }
+
   .card-group {
-    overflow: hidden; }
+    overflow: hidden;
+  }
+
   .card {
     width: auto;
     height: auto;
     margin: 20px;
     align-items: center;
-    justify-content: center; } }
+    justify-content: center;
+  }
+}
 
+/*media query for mobile */
 @media only screen and (max-width: 768px) {
+  .nav {
+    font-size: 10px;
+  }
+
   .card {
     width: 300px;
     height: 450px;
     margin: 10px;
     align-items: center;
     margin: auto;
-    justify-content: center; } }
+    justify-content: center;
+  }
+}
+
+@media (min-width: 576px) {
+  .card-deck {
+    margin-left: 0;
+  }
+}
