--- a/scss/main.scss
+++ b/scss/main.scss
@@ -93,17 +93,12 @@ li {
 }
 
 .history {
-  width: 60%;
+
   color: white;
-  float: left;
   text-align: center;
   margin: 20px;
-}
-
-.vintage {
-  width: 30%;
-  float: right;
-  margin: 20px;
+  margin-bottom: 80px;
+  align-content: center;
 }
 
 .break {
@@ -135,6 +130,7 @@ li {
   position: relative;
   height: 0;
   margin: 40px;
+
 }
 
 .video-responsive iframe {
@@ -156,6 +152,7 @@ li {
 .card {
   width: 20%;
   margin: 40px;
+  height: auto;
   padding: 10px;
   align-items: center;
   border-color: rgb(175, 199, 238);
@@ -179,6 +176,24 @@ li {
   overflow-x: hidden;
 }
 
+.whatever {
+  margin: auto;
+  width: 80%;
+  height: auto;
+
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(68, 49, 49);
+  font-size: 10px;
+  color: white;
+  text-align: right;
+}
+
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .card-deck {
@@ -186,6 +201,7 @@ li {
     align-items: center;
     margin: auto;
     justify-content: center;
+    margin-left: 0;
   }
 
   .card-group {
@@ -201,8 +217,13 @@ li {
   }
 }
 
+
+
 @media only screen and (max-width: 768px) {
 
+  .nav {
+    font-size: 10px;
+  }
 
   .card {
     width: 300px;
@@ -211,5 +232,11 @@ li {
     align-items: center;
     margin: auto;
     justify-content: center;
+  }
+}
+
+@media (min-width: 576px) {
+  .card-deck {
+    margin-left: 0;
   }
 }
